k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mahamotsa-service
  namespace: vuyo-apps
spec:
  selector:
    app: mahamotsa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
