k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mahamotsa-ingress
  namespace: vuyo-apps
spec:
  rules:
    - host: mahamotsa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mahamotsa-service
                port:
                  number: 80
